# tokio-os-timer

./: .cirrus.yml  .travis.yml  Cargo.toml  README.md
src/: delay.rs  interval.rs  lib.rs
src/sys/: kqueue.rs  mod.rs  timerfd.rs
tests/: delay.rs  interval.rs
